# tatogalib

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cmd  sphinx-setup.txt
docs/: history.html  update.bat
docs/source/: conf.py  index.rst
docs/source/system/: clipboard.rst  index.rst  notification.rst  notifications.rst
docs/source/ui/: index.rst  tabutton.rst  (+3 more)
materials/: content-uri.txt
src/tatogalib/: __init__.py  pyproject.toml
src/tatogalib/system/: __init__.py
src/tatogalib/system/clipboard/: __init__.py  android.py  core.py  windows.py
src/tatogalib/system/notification/: __init__.py  android.py  core.py  windows.py
src/tatogalib/system/notifications/: __init__.py  android.py  core.py  windows.py
src/tatogalib/ui/: window.py
src/tatogalib/ui/tabutton/: __init__.py  android.py  core.py  ios.py  winforms.py
src/tatogalib/ui/taselection/: __init__.py  android.py  core.py  ios.py  windows.py
src/tatogalib/ui/tawebview/: __init__.py  android.py  core.py  ios.py  windows.py
src/tatogalib/uri_io/: __init__.py
src/tatogalib/uri_io/urifile/: __init__.py  android.py  core.py  desktop.py  ios.py
src/tatogalib/uri_io/urifilebrowser/: __init__.py  android.py  core.py  desktop.py  ios.py
src/tatogalib/uri_io/uriinputstream/: __init__.py  android.py  core.py  desktop.py  ios.py
src/tatogalib/uri_io/urioutputstream/: __init__.py  android.py  core.py  desktop.py  ios.py
src/tatogalib/util/: appconfig.py  i18nUtils.py  sysargv.py
templates/: _README.TXT
templates/newwidget/: __init__.py  android.py  core.py
test/: README.md  pyvenv.cmd
test/pyPlayground/: readme.txt  user_gui.py
(+89 files in other folders)
