[project]
name = "tatogalib"
version = "0.9.6"

[tool.briefcase]
project_name = "tatogalib"
version = "0.9.6"
build = 1
version_code = 1
url = "https://www.tanapro.ch"
license = "Other"
author = 'Tom Arn'
author_email = "sw@tanapro.ch"

requires = [
    'c:/Projects/Python/Toga/core'
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["__pychache__"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
